# quitecapital-outreach

./: Procfile  Quitecapital_backend.py  README.md  _.gitignore (1).txt  app.py  pyproject.toml  quitecapital_frontend-1.jsx.txt  requirements.txt
