[tool.poetry]
name = "quitecapital-outreach"
version = "0.1.0"
description = "AI-powered restaurant outreach platform"
authors = ["Abhishek <abhishektiwari160906@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.0"
uvicorn = "0.27.0"
python-multipart = "0.0.7"
pydantic = "2.7.0"
requests = "2.32.0"
twilio = "9.2.0"
apscheduler = "3.10.4"
python-dotenv = "1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
